# ml_papers_hub

./: .cursor.json  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  format_and_lint.sh  pyproject.toml  requirements.txt
app/: main.py
app/components/: chat.py
app/pages/: 01_upload.py  02_deep_dive.py  02_view.py  03_label.py  03_manual_labeling.py  04_bulk_process.py
scripts/: gen_papers_info.py  main_scraper.py  papers_scraper.py
src/: arxiv.py  cache.py  firebase.py  pdf_parser.py
src/scrapers/: ak_scraper.py  gmail_scraper.py
